[metadata]
name = airtel
version = 0.0.1
author = rivo2302
author_email = rivo2302@gmail.com
description = A light open source module for Airtel API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rivo2302/airtel_money_api
project_urls =
    Bug Tracker = https://github.com/rivo2302/airtel_money_api/issues


classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GPL3 License
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = requests